updated fulls, and thumbs

--- a/learnmore.html
+++ b/learnmore.html
@@ -7,59 +7,59 @@
 <html>
 
 <head>
-    <title>Aaron Guo's Portfolio</title>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-    <link rel="stylesheet" href="assets/css/main.css" />
+	<title>Aaron Guo's Portfolio</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<link rel="stylesheet" href="assets/css/main.css" />
 </head>
 
 <body class="is-preload">
 
-    <!-- Header -->
-    <header id="header">
-        <div class="inner">
-            <a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-            <h1><strong>Thanks for asking!</strong>
-        </div>
-    </header>
+	<!-- Header -->
+	<header id="header">
+		<div class="inner">
+			<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
+			<h1><strong>Thanks for asking!</strong>
+		</div>
+	</header>
 
-    <!-- Main -->
-    <div id="main">
+	<!-- Main -->
+	<div id="main">
 
-        <!-- One -->
-        <section id="one">
-            <header class="major">
-                <h2>A Little More
-                </h2>
-            </header>
-            <p>I’ve worked on diverse projects, including analyzing over 400,000 game data points from League of Legends
-                to uncover how
-                resource accumulation influences match outcomes. My research, published in the Journal of Student
-                Research, showcases my
-                ability to handle large datasets and generate meaningful insights.
-                </br> </br>
-                I’m skilled in Python, R, SQL, and Power BI, and I enjoy building dashboards, automating workflows, and
-                providing
-                actionable recommendations to stakeholders. Whether creating online menu systems that save hours of work
-                or predicting
-                trends to optimize resources, I aim to make data accessible and actionable.
-                </br> </br>
-                Outside of work, you can find me hiking scenic trails, experimenting with creative recipes in the
-                kitchen, or designing
-                small online businesses. I also enjoy helping friends and peers turn their ideas into reality with my
-                technical
-                expertise.
-            </p>
-            <ul class="actions">
-                <li><a href="index.html" class="button">Go Back</a></li>
-            </ul>
-        </section>
-        <!-- Two -->
-        <!-- <section id="two">
+		<!-- One -->
+		<section id="one">
+			<header class="major">
+				<h2>A Little More
+				</h2>
+			</header>
+			<p>I’ve worked on diverse projects, including analyzing over 400,000 game data points from League of Legends
+				to uncover how
+				resource accumulation influences match outcomes. My research, published in the Journal of Student
+				Research, showcases my
+				ability to handle large datasets and generate meaningful insights.
+				</br> </br>
+				I’m skilled in Python, R, SQL, and Power BI, and I enjoy building dashboards, automating workflows, and
+				providing
+				actionable recommendations to stakeholders. Whether creating online menu systems that save hours of work
+				or predicting
+				trends to optimize resources, I aim to make data accessible and actionable.
+				</br> </br>
+				Outside of work, you can find me hiking scenic trails, experimenting with creative recipes in the
+				kitchen, or designing
+				small online businesses. I also enjoy helping friends and peers turn their ideas into reality with my
+				technical
+				expertise.
+			</p>
+			<ul class="actions">
+				<li><a href="index.html" class="button">Go Back</a></li>
+			</ul>
+		</section>
+		<!-- Two -->
+		<!-- <section id="two">
             <h2>Recent Work</h2>
             <div class="row">
                 <article class="col-6 col-12-xsmall work-item">
-                    <a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
+                    <a href="images/fulls/01.png" class="image fit thumb"><img src="images/thumbs/01.png" alt="" /></a>
                     <h3>Magna sed consequat tempus</h3>
                     <p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
                 </article>
@@ -94,8 +94,8 @@
             </ul>
         </section> -->
 
-        <!-- Three -->
-        <!-- <section id="three">
+		<!-- Three -->
+		<!-- <section id="three">
             <h2>Get In Touch</h2>
             <p>Accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu
                 lorem semper nunc nisi lorem vulputate lorem neque lorem ipsum dolor.</p>
@@ -136,8 +136,8 @@
             </div>
         </section>  -->
 
-        <!-- Four -->
-        <!--
+		<!-- Four -->
+		<!--
 					<section id="four">
 						<h2>Elements</h2>
 
@@ -435,7 +435,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 							<div class="box alt">
 								<div class="row gtr-50 gtr-uniform">
 									<div class="col-12"><span class="image fit"><img src="images/fulls/05.jpg" alt="" /></span></div>
-									<div class="col-4"><span class="image fit"><img src="images/thumbs/01.jpg" alt="" /></span></div>
+									<div class="col-4"><span class="image fit"><img src="images/thumbs/01.png" alt="" /></span></div>
 									<div class="col-4"><span class="image fit"><img src="images/thumbs/02.jpg" alt="" /></span></div>
 									<div class="col-4"><span class="image fit"><img src="images/thumbs/03.jpg" alt="" /></span></div>
 									<div class="col-4"><span class="image fit"><img src="images/thumbs/04.jpg" alt="" /></span></div>
@@ -443,7 +443,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 									<div class="col-4"><span class="image fit"><img src="images/thumbs/06.jpg" alt="" /></span></div>
 									<div class="col-4"><span class="image fit"><img src="images/thumbs/03.jpg" alt="" /></span></div>
 									<div class="col-4"><span class="image fit"><img src="images/thumbs/02.jpg" alt="" /></span></div>
-									<div class="col-4"><span class="image fit"><img src="images/thumbs/01.jpg" alt="" /></span></div>
+									<div class="col-4"><span class="image fit"><img src="images/thumbs/01.png" alt="" /></span></div>
 								</div>
 							</div>
 							<h5>Left &amp; Right</h5>
@@ -454,8 +454,8 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					</section>
 				-->
 
-    </div>
-    <!-- 
+	</div>
+	<!-- 
     <footer id="footer">
         <div class="inner">
             <ul class="icons">
