--- a/index.html
+++ b/index.html
@@ -54,8 +54,11 @@
 					<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
 					<h3>University Enrollment Management System</h3>
 					<p>Full-Stack Web Developement with Python Flask, Amazon AWS, MySQL, CSS and HTML</p>
-					<p>Demo: </p>
-					<p>Documentation: </p>
+					<p>Demo: <a
+							href="https://www.youtube.com/watch?v=TcF3sAtyHhM"></br>https://www.youtube.com/watch?v=TcF3sAtyHhM</a>
+					</p>
+					<p>Documentation: <a href="documentation.pdf" download="uni_enroll_mansys_aaronguo">Download the
+							pdf</a></p>
 				</article>
 				<article class="col-6 col-12-xsmall work-item">
 					<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
@@ -429,7 +432,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 							<div class="box alt">
 								<div class="row gtr-50 gtr-uniform">
 									<div class="col-12"><span class="image fit"><img src="images/fulls/05.jpg" alt="" /></span></div>
-									<div class="col-4"><span class="image fit"><img src="images/thumbs/01.jpg" alt="" /></span></div>
+									<div class="col-4"><span class="image fit"><img src="images/thumbs/01.png" alt="" /></span></div>
 									<div class="col-4"><span class="image fit"><img src="images/thumbs/02.jpg" alt="" /></span></div>
 									<div class="col-4"><span class="image fit"><img src="images/thumbs/03.jpg" alt="" /></span></div>
 									<div class="col-4"><span class="image fit"><img src="images/thumbs/04.jpg" alt="" /></span></div>
@@ -437,7 +440,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 									<div class="col-4"><span class="image fit"><img src="images/thumbs/06.jpg" alt="" /></span></div>
 									<div class="col-4"><span class="image fit"><img src="images/thumbs/03.jpg" alt="" /></span></div>
 									<div class="col-4"><span class="image fit"><img src="images/thumbs/02.jpg" alt="" /></span></div>
-									<div class="col-4"><span class="image fit"><img src="images/thumbs/01.jpg" alt="" /></span></div>
+									<div class="col-4"><span class="image fit"><img src="images/thumbs/01.png" alt="" /></span></div>
 								</div>
 							</div>
 							<h5>Left &amp; Right</h5>
@@ -447,7 +450,6 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 					</section>
 				-->
-
 	</div>
 
 	<!-- Footer -->
