--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 				<h2>Background
 				</h2>
 			</header>
-			<p>Hi, I’m Aaron Guo, a Computer Science student at The George Washington University with a passion for
+			<p>I'm a Computer Science student at The George Washington University with a passion for
 				leveraging data to
 				solve problems and improve decision-making. My academic and professional experiences have honed my
 				skills in data
@@ -57,13 +57,16 @@
 					<p>Demo: <a
 							href="https://www.youtube.com/watch?v=TcF3sAtyHhM"></br>https://www.youtube.com/watch?v=TcF3sAtyHhM</a>
 					</p>
-					<p>Documentation: <a href="documentation.pdf" download="uni_enroll_mansys_aaronguo">Download the
-							pdf</a></p>
+					<p>Documentation: <a href="documentation.pdf" download="uni_enroll_mansys_aaronguo"> </br>University
+							Enrollment Management System Documentation</a></p>
 				</article>
 				<article class="col-6 col-12-xsmall work-item">
 					<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
 					<h3>How does resource accumulation in League of Legends affect the outcome of the game?</h3>
 					<p>Published Research on Game Analytics using Kaggle, RStudio, and Research Methodologies</p>
+					<p>Documentation: <a href="https://www.jsr.org/preprints/index.php/scholarlaunch/preprint/view/153">
+							</br><i> How does Resource Accumulation in League of
+								Legends affect the Outcome of the Game?</i></a></p>
 				</article>
 				<!-- <article class="col-6 col-12-xsmall work-item">
 					<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
