added new project seennofears

--- a/index.html
+++ b/index.html
@@ -68,12 +68,13 @@
 							</br><i> How does Resource Accumulation in League of
 								Legends affect the Outcome of the Game?</i></a></p>
 				</article>
-				<!-- <article class="col-6 col-12-xsmall work-item">
-					<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
-					<h3>Tortor metus commodo</h3>
-					<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-				</article>
 				<article class="col-6 col-12-xsmall work-item">
+					<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
+					<h3>Seen No Fears Clothing Store</h3>
+					<p>Business Web Design using Shopify Liquid, UI/UX Design, CSS and HTML.</p>
+					<p>Store Link: <a href="https://seenofears.myshopify.com/">https://seenofears.myshopify.com/</a></p>
+				</article>
+				<!-- <article class="col-6 col-12-xsmall work-item">
 					<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
 					<h3>Quam neque phasellus</h3>
 					<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
