made links open a new tab

--- a/index.html
+++ b/index.html
@@ -54,25 +54,29 @@
 					<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
 					<h3>University Enrollment Management System</h3>
 					<p>Full-Stack Web Developement with Python Flask, Amazon AWS, MySQL, CSS and HTML</p>
-					<p>Demo: <a
-							href="https://www.youtube.com/watch?v=TcF3sAtyHhM"></br>https://www.youtube.com/watch?v=TcF3sAtyHhM</a>
+					<p>Demo: <a href="https://www.youtube.com/watch?v=TcF3sAtyHhM"
+							target="_blank"></br>https://www.youtube.com/watch?v=TcF3sAtyHhM</a>
 					</p>
-					<p>Documentation: <a href="documentation.pdf" download="uni_enroll_mansys_aaronguo"> </br>University
+					<!-- <p>Documentation: <a href="documentation.pdf" download="uni_enroll_mansys_aaronguo"> </br>University
+							Enrollment Management System Documentation</a></p> -->
+					<p>Documentation: <a href="documentation.pdf" target="_blank"> </br>University
 							Enrollment Management System Documentation</a></p>
 				</article>
 				<article class="col-6 col-12-xsmall work-item">
 					<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
 					<h3>How does resource accumulation in League of Legends affect the outcome of the game?</h3>
 					<p>Published Research on Game Analytics using Kaggle, RStudio, and Research Methodologies</p>
-					<p>Documentation: <a href="https://www.jsr.org/preprints/index.php/scholarlaunch/preprint/view/153">
+					<p>Documentation: <a href="https://www.jsr.org/preprints/index.php/scholarlaunch/preprint/view/153"
+							target="_blank">
 							</br><i> How does Resource Accumulation in League of
 								Legends affect the Outcome of the Game?</i></a></p>
 				</article>
 				<article class="col-6 col-12-xsmall work-item">
 					<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
 					<h3>Seen No Fears Clothing Store</h3>
-					<p>Business Web Design using Shopify Liquid, UI/UX Design, CSS and HTML.</p>
-					<p>Store Link: <a href="https://seenofears.myshopify.com/">https://seenofears.myshopify.com/</a></p>
+					<p>Business Web Design using Shopify Liquid, UI/UX Design, CSS and HTML</p>
+					<p>Store Link: <a href="https://seenofears.myshopify.com/"
+							target="_blank">https://seenofears.myshopify.com/</a></p>
 				</article>
 				<!-- <article class="col-6 col-12-xsmall work-item">
 					<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
