--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
+	<link rel="stylesheet" href="assets/css/personal.css" />
+
 </head>
 
 <body class="is-preload">
@@ -19,9 +21,11 @@
 	<header id="header">
 		<div class="inner">
 			<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-			<h1><strong>Hi! My name is Aaron</strong>, I'm a Junior at the George Washington University with
-				a
-				passion for Data.
+			<h1>
+
+				<p id="demo">
+				</p>
+
 		</div>
 	</header>
 
@@ -486,6 +490,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 	<script src="assets/js/breakpoints.min.js"></script>
 	<script src="assets/js/util.js"></script>
 	<script src="assets/js/main.js"></script>
+	<script src="assets/js/personal.js"></script>
 
 </body>
 
