--- a/index.html
+++ b/index.html
@@ -55,50 +55,61 @@
 			<h2>Projects</h2>
 			<div class="row">
 				<article class="col-6 col-12-xsmall work-item">
-					<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
-					<h3>University Enrollment Management System</h3>
-					<p>Full-Stack Web Developement with Python Flask, Amazon AWS, MySQL, CSS and HTML</p>
-					<p>Demo: <a href="https://www.youtube.com/watch?v=TcF3sAtyHhM"
-							target="_blank"></br>https://www.youtube.com/watch?v=TcF3sAtyHhM</a>
+					<a href="images/fulls/01.jpg" class="image fit thumb"><img
+							src="images/thumbs/01.jpg" alt="Screenshot of the graduate application system" /></a>
+					<h3>Data-Driven Graduate Application System</h3>
+					<p><strong>Tech Stack:</strong> Python (Flask), MySQL, AWS, Gemini API, JavaScript</p>
+					<p>Integrated a fine-tuned AI chatbot for user support, architected the relational database schema, and led a team
+						of 6, owning the backend logic and cloud deployment.</p>
+					<p>
+						<a href="https://www.youtube.com/watch?v=TcF3sAtyHhM" target="_blank">Project Demo</a> |
+						<a href="<YOUR-GITHUB-REPO-LINK-HERE>" target="_blank">GitHub</a>
 					</p>
-					<!-- <p>Documentation: <a href="documentation.pdf" download="uni_enroll_mansys_aaronguo"> </br>University
-							Enrollment Management System Documentation</a></p> -->
-					<p>Documentation: <a href="documentation.pdf" target="_blank"> </br>University
-							Enrollment Management System Documentation</a></p>
 				</article>
 				<article class="col-6 col-12-xsmall work-item">
-					<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
-					<h3>How does resource accumulation in League of Legends affect the outcome of the game?</h3>
-					<p>Published Research on Game Analytics using Kaggle, RStudio, and Research Methodologies</p>
-					<p>Documentation: <a href="https://www.jsr.org/preprints/index.php/scholarlaunch/preprint/view/153"
-							target="_blank">
-							</br><i> How does Resource Accumulation in League of
-								Legends affect the Outcome of the Game?</i></a></p>
+					<a href="images/fulls/02.jpg" class="image fit thumb"><img
+							src="images/thumbs/02.jpg"
+							alt="Data visualization from the League of Legends analysis" /></a>
+					<h3>Statistical Analysis in Esports: A Publication</h3>
+					<p><strong>Tech Stack:</strong> R (dplyr, ggplot2), Statistical Modeling, Data Visualization</p>
+					<p>Performed Exploratory Data Analysis (EDA) on a large Kaggle dataset and applied regression models to determine
+						the statistical significance of in-game resources on match outcomes.</p>
+					<p>
+						<a href="https://www.jsr.org/preprints/index.php/scholarlaunch/preprint/view/153" target="_blank">Read The
+							Publication</a>
+					</p>
 				</article>
-				<article class="col-6 col-12-xsmall work-item">
+				<!-- <article class="col-6 col-12-xsmall work-item">
 					<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
 					<h3>Seen No Fears Clothing Store</h3>
 					<p>Business Web Design using Shopify Liquid, UI/UX Design, CSS and HTML</p>
 					<p>Store Link: <a href="https://seenofears.myshopify.com/"
 							target="_blank">https://seenofears.myshopify.com/</a></p>
+				</article> -->
+				<article class="col-6 col-12-xsmall work-item">
+					<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg"
+							alt="Diagram of the social media pipeline" /></a>
+					<h3>AI-Powered Content & Social Media Pipeline</h3>
+					<p><strong>Tech Stack:</strong> Python, REST APIs, Shell Scripting, Cron, Linux</p>
+					<p>Engineered an automated data pipeline to deploy video content across social media platforms and orchestrated the
+						entire workflow using cron jobs in a Linux environment.</p>
+					<p>
+						<a href="https://github.com/aguo890/ImprovedVideoBot" target="_blank">GitHub Repo</a> |
+						<a href="https://www.tiktok.com/@crazystorylord" target="_blank">Live Example</a>
+					</p>
 				</article>
 				<!-- <article class="col-6 col-12-xsmall work-item">
-					<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
-					<h3>Quam neque phasellus</h3>
-					<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-				</article> -->
-				<!-- <article class="col-6 col-12-xsmall work-item">
 					<a href="images/fulls/05.jpg" class="image fit thumb"><img src="images/thumbs/05.jpg" alt="" /></a>
-					<h3>Nunc enim commodo aliquet</h3>
+					<h3></h3>
 					<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 				</article>
 				<article class="col-6 col-12-xsmall work-item">
 					<a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/06.jpg" alt="" /></a>
 					<h3>Risus ornare lacinia</h3>
 					<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-				</article> -->
+				</article>
 			</div>
-			<ul class="actions">
+			<ul class="actions"> -->
 				<!-- <li><a href="#" class="button">Full Portfolio</a></li> -->
 			</ul>
 		</section>
