update link for yt

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 				proactively find threats using VRChat-specific tools.</p>
 			<p><strong>Tech Stack:</strong> React, TypeScript, Gemini API, Tailwind CSS</p>
 			<p>
-				<a href="https://youtu.be/mMDLlLM5dck" target="_blank" rel="noopener noreferrer">Live Demo</a> |
+				<a href="https://www.youtube.com/watch?v=mMDLlLM5dck&ab_channel=AaronGuo" target="_blank" rel="noopener noreferrer">Live Demo</a> |
 				<a href="https://github.com/aguo890/trustsafteyanalytics" target="_blank"
 					rel="noopener noreferrer">GitHub</a>
 			</p>
