--- a/index.html
+++ b/index.html
@@ -34,83 +34,162 @@
 
 	<!-- Main -->
 	<div id="main">
-<!-- Two: Projects -->
-<section id="two">
-	<h2>Recent Projects</h2>
-	<div class="row">
-		<!-- IMPROVEMENT: Restructured each project for clarity and consistency. Added rel="noopener noreferrer" to all external links. -->
-		<article class="col-6 col-12-xsmall work-item">
-			<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg"
-					alt="Screenshot of the graduate application system" /></a>
-			<h3>Data-Driven Graduate Application System</h3>
-			<p>Led a team of 6 to develop a full-stack web application featuring an AI chatbot for user support,
-				architected the database schema, and owned backend logic and cloud deployment.</p>
-			<p><strong>Tech Stack:</strong> Python (Flask), MySQL, AWS, Gemini API, JavaScript</p>
-			<p>
-				<a href="https://www.youtube.com/watch?v=TcF3sAtyHhM" target="_blank" rel="noopener noreferrer">Project
-					Demo</a> |
-				<!-- IMPROVEMENT: Make sure to replace this placeholder! -->
-				<a href="https://github.com/aguo890/REPLACE-WITH-REPO-LINK" target="_blank"
-					rel="noopener noreferrer">GitHub</a>
-			</p>
-		</article>
-		<article class="col-6 col-12-xsmall work-item">
-			<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg"
-					alt="Data visualization from the League of Legends analysis" /></a>
-			<h3>Statistical Analysis in Esports: A Publication</h3>
-			<p>Performed Exploratory Data Analysis (EDA) on a large Kaggle dataset and applied regression models
-				to determine the statistical significance of in-game resources on match outcomes.</p>
-			<p><strong>Tech Stack:</strong> R (dplyr, ggplot2), Statistical Modeling, Data Visualization</p>
-			<p>
-				<a href="https://www.jsr.org/preprints/index.php/scholarlaunch/preprint/view/153" target="_blank"
-					rel="noopener noreferrer">Read The Publication</a>
-			</p>
-		</article>
-		<article class="col-6 col-12-xsmall work-item">
-			<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg"
-					alt="Animated demonstration of the VRChat Trust & Safety Workbench" /></a>
-			<h3>VRChat Trust & Safety Workbench</h3>
-			<p>Developed an AI-augmented dashboard for analysts to review reports, investigate users, and
-				proactively find threats using VRChat-specific tools.</p>
-			<p><strong>Tech Stack:</strong> React, TypeScript, Gemini API, Tailwind CSS</p>
-			<p>
-				<a href="https://www.youtube.com/watch?v=mMDLlLM5dck&ab_channel=AaronGuo" target="_blank" rel="noopener noreferrer">Live Demo</a> |
-				<a href="https://github.com/aguo890/trustsafteyanalytics" target="_blank"
-					rel="noopener noreferrer">GitHub</a>
-			</p>
-		</article>
-		<article class="col-6 col-12-xsmall work-item">
-			<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg"
-					alt="Diagram of the social media pipeline" /></a>
-			<h3>AI-Powered Content & Social Media Pipeline</h3>
-			<p>Engineered an automated data pipeline to generate and deploy video content across multiple social
-				media platforms, orchestrating the entire workflow with cron jobs in a Linux environment.</p>
-			<p><strong>Tech Stack:</strong> Python, REST APIs, Shell Scripting, Cron, Linux</p>
-			<p>
-				<a href="https://github.com/aguo890/ImprovedVideoBot" target="_blank" rel="noopener noreferrer">GitHub
-					Repo</a> |
-				<a href="https://www.tiktok.com/@crazystorylord" target="_blank" rel="noopener noreferrer">Live
-					Example</a>
-			</p>
-		</article>
-	</div>
-</section>
+		<!-- Two: Projects -->
+		<section id="two">
+			<h2>Recent Projects</h2>
+			<div class="row">
+				<!-- IMPROVEMENT: Restructured each project for clarity and consistency. Added rel="noopener noreferrer" to all external links. -->
+				<article class="col-6 col-12-xsmall work-item">
+					<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg"
+							alt="Screenshot of the graduate application system" /></a>
+					<h3>Data-Driven Graduate Application System</h3>
+					<p>Led a team of 6 to develop a full-stack web application featuring an AI chatbot for user support,
+						architected the database schema, and owned backend logic and cloud deployment.</p>
+					<p><strong>Tech Stack:</strong> Python (Flask), MySQL, AWS, Gemini API, JavaScript</p>
+					<p>
+						<a href="https://www.youtube.com/watch?v=TcF3sAtyHhM" target="_blank"
+							rel="noopener noreferrer">Project
+							Demo</a> |
+						<!-- IMPROVEMENT: Make sure to replace this placeholder! -->
+						<a href="https://github.com/aguo890/REPLACE-WITH-REPO-LINK" target="_blank"
+							rel="noopener noreferrer">GitHub</a>
+					</p>
+				</article>
+				<article class="col-6 col-12-xsmall work-item">
+					<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg"
+							alt="Data visualization from the League of Legends analysis" /></a>
+					<h3>Statistical Analysis in Esports: A Publication</h3>
+					<p>Performed Exploratory Data Analysis (EDA) on a large Kaggle dataset and applied regression models
+						to determine the statistical significance of in-game resources on match outcomes.</p>
+					<p><strong>Tech Stack:</strong> R (dplyr, ggplot2), Statistical Modeling, Data Visualization</p>
+					<p>
+						<a href="https://www.jsr.org/preprints/index.php/scholarlaunch/preprint/view/153"
+							target="_blank" rel="noopener noreferrer">Read The Publication</a>
+					</p>
+				</article>
+				<article class="col-6 col-12-xsmall work-item">
+					<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg"
+							alt="Animated demonstration of the VRChat Trust & Safety Workbench" /></a>
+					<h3>VRChat Trust & Safety Workbench</h3>
+					<p>Developed an AI-augmented dashboard for analysts to review reports, investigate users, and
+						proactively find threats using VRChat-specific tools.</p>
+					<p><strong>Tech Stack:</strong> React, TypeScript, Gemini API, Tailwind CSS</p>
+					<p>
+						<a href="https://www.youtube.com/watch?v=mMDLlLM5dck&ab_channel=AaronGuo" target="_blank"
+							rel="noopener noreferrer">Live Demo</a> |
+						<a href="https://github.com/aguo890/trustsafteyanalytics" target="_blank"
+							rel="noopener noreferrer">GitHub</a>
+					</p>
+				</article>
+				<article class="col-6 col-12-xsmall work-item">
+					<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg"
+							alt="Diagram of the social media pipeline" /></a>
+					<h3>AI-Powered Content & Social Media Pipeline</h3>
+					<p>Engineered an automated data pipeline to generate and deploy video content across multiple social
+						media platforms, orchestrating the entire workflow with cron jobs in a Linux environment.</p>
+					<p><strong>Tech Stack:</strong> Python, REST APIs, Shell Scripting, Cron, Linux</p>
+					<p>
+						<a href="https://github.com/aguo890/ImprovedVideoBot" target="_blank"
+							rel="noopener noreferrer">GitHub
+							Repo</a> |
+						<a href="https://www.tiktok.com/@crazystorylord" target="_blank" rel="noopener noreferrer">Live
+							Example</a>
+					</p>
+				</article>
+
+
+				<!-- START: NEW PROJECTS TO ADD -->
+				<!-- Project 5: LinkedIn Automation Bot -->
+				<article class="col-6 col-12-xsmall work-item">
+					<!-- IMPORTANT: Replace with your actual project images -->
+					<a href="images/fulls/05.jpg" class="image fit thumb"><img src="images/thumbs/05.jpg"
+							alt="Screenshot of a script automating LinkedIn messages" /></a>
+					<h3>LinkedIn Referral & Connection Bot</h3>
+					<p>Developed an automation script using Selenium to streamline the job application process by
+						finding connections at
+						target companies and sending personalized referral requests.</p>
+					<p><strong>Tech Stack:</strong> Python, Selenium, WebDriver Manager, SQLite</p>
+					<p>
+						<!-- IMPORTANT: Replace with your actual GitHub repo link -->
+						<a href="https://github.com/aguo890/linkedin-connection-referral-bot" target="_blank"
+							rel="noopener noreferrer">GitHub</a>
+					</p>
+				</article>
+
+				<!-- Project 6: Job Application Tracker -->
+				<article class="col-6 col-12-xsmall work-item">
+					<!-- IMPORTANT: Replace with your actual project images -->
+					<a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/06.jpg"
+							alt="Flowchart of the job tracking and email alert system" /></a>
+					<h3>Job Application Tracker & Alerter</h3>
+					<p>Engineered a system that automatically scrapes job boards for application status updates and
+						sends a consolidated
+						summary digest directly to my inbox using the Gmail API.</p>
+					<p><strong>Tech Stack:</strong> Python, Beautiful Soup, Requests, Gmail API, Cron</p>
+					<p>
+						<!-- IMPORTANT: Replace with your actual GitHub repo link -->
+						<a href="https://github.com/aguo890/project-sifter" target="_blank"
+							rel="noopener noreferrer">GitHub</a>
+					</p>
+				</article>
+				<!-- END: NEW PROJECTS TO ADD -->
+			</div>
+		</section>
+
+		<!-- START: POLAROID SCATTER GALLERY -->
+		<section class="polaroid-gallery-wrapper">
+			<div class="polaroid-container">
+				<div class="polaroid p1">
+					<a href="images/me/01.jpg" data-poptrox="gallery-me" class="image"><img src="images/me/01.jpg"
+							alt="A photo of me"></a>
+				</div>
+				<div class="polaroid p2">
+					<a href="images/me/02.jpg" data-poptrox="gallery-me" class="image"><img src="images/me/02.jpg"
+							alt="A photo of me"></a>
+				</div>
+				<div class="polaroid p3">
+					<a href="images/me/03.jpg" data-poptrox="gallery-me" class="image"><img src="images/me/03.jpg"
+							alt="A photo of me"></a>
+				</div>
+				<div class="polaroid p4">
+					<a href="images/me/04.jpg" data-poptrox="gallery-me" class="image"><img src="images/me/04.jpg"
+							alt="A photo of me"></a>
+				</div>
+				<div class="polaroid p5">
+					<a href="images/me/05.jpg" data-poptrox="gallery-me" class="image"><img src="images/me/05.jpg"
+							alt="A photo of me"></a>
+				</div>
+			</div>
+		</section>
+		<!-- END: POLAROID SCATTER GALLERY -->
 
 		<!-- One: Background -->
 		<section id="one">
 			<header class="major">
 				<h2>About Me</h2>
 			</header>
+
+
 			<!-- IMPROVEMENT: Re-phrased for more impact and split into two <p> tags instead of using <br> for spacing. -->
-			<p>I'm a Computer Science student at The George Washington University driven by a passion for leveraging
-				data to solve complex problems and drive intelligent decision-making. I thrive in environments where I
-				can build impactful, data-centric solutions for businesses.</p>
-			<p>My academic and professional experiences have honed my skills in data analysis, visualization, and
-				full-stack development, with a strong foundation in Python, SQL, and cloud technologies.</p>
-			<ul class="actions">
-				<!-- You could link this to your resume or the contact section -->
-				<li><a href="assets/resume.pdf" target="_blank" rel="noopener noreferrer" class="button">View My Resume</a>
-				</li>
+			<p>My coding journey didn't start in a computer lab—it started with shrimp fried rice and sweet & sour pork.
+				Growing up
+				in my family's Chinese restaurant, I saw first-hand how much hard work went into every single day. So, I
+				started
+				tinkering.</p>
+			<p>I built simple dashboards to track our most popular dishes (spoiler: it was always General Tso's chicken)
+				and wrote
+				little scripts to help my parents get a better handle on inventory. That’s when I fell in love with
+				using technology
+				to solve real, everyday problems. It’s the same energy I bring to my Computer Science studies at GWU
+				today—I just
+				love building things that are genuinely useful.</p>
+			<p>When I'm not behind a keyboard, I'm probably exploring a new coffee shop or trying to find the best
+				noodle soup in
+				D.C. If you want to chat about tech, data, or food, feel free to reach out!</p>
+			<!-- You could link this to your resume or the contact section -->
+			<li><a href="assets/resume.pdf" target="_blank" rel="noopener noreferrer" class="button">View My
+					Resume</a>
+			</li>
 			</ul>
 		</section>
 
@@ -128,7 +207,7 @@
 			</p>
 		</section>
 
-		
+
 		<!-- Three: Contact Form -->
 		<!-- IMPROVEMENT: Uncommented and activated this crucial section. -->
 		<section id="three">
