--- a/index.html
+++ b/index.html
@@ -242,7 +242,8 @@
 						</li>
 						<li>
 							<h3 class="icon solid fa-envelope"><span class="label">Email</span></h3>
-							<a href="mailto:compsci.aaron.guo@gmail.com">compsci.aaron.guo@gmail.com</a>
+							<!-- <a href="mailto:compsci.aaron.guo@gmail.com">compsci.aaron.guo@gmail.com</a> -->
+							<a href="mailto:aguo890@gwmail.gwu.edu">aguo890@gwmail.gwu.edu</a>
 						</li>
 					</ul>
 				</div>
