made it more natural

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 				<article class="col-6 col-12-xsmall work-item">
 					<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg"
 							alt="Screenshot of the graduate application system" /></a>
-					<h3>Data-Driven Graduate Application System</h3>
+					<h3>DataGraduate Application System</h3>
 					<p>Led a team of 6 to develop a full-stack web application featuring an AI chatbot for user support,
 						architected the database schema, and owned backend logic and cloud deployment.</p>
 					<p><strong>Tech Stack:</strong> Python (Flask), MySQL, AWS, Gemini API, JavaScript</p>
@@ -58,7 +58,7 @@
 				<article class="col-6 col-12-xsmall work-item">
 					<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg"
 							alt="Data visualization from the League of Legends analysis" /></a>
-					<h3>Statistical Analysis in Esports: A Publication</h3>
+					<h3>Statistical Analysis in Esports</h3>
 					<p>Performed Exploratory Data Analysis (EDA) on a large Kaggle dataset and applied regression models
 						to determine the statistical significance of in-game resources on match outcomes.</p>
 					<p><strong>Tech Stack:</strong> R (dplyr, ggplot2), Statistical Modeling, Data Visualization</p>
