--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
 							rel="noopener noreferrer">Project
 							Demo</a> |
 						<!-- IMPROVEMENT: Make sure to replace this placeholder! -->
-						<a href="https://github.com/aguo890/REPLACE-WITH-REPO-LINK" target="_blank"
-							rel="noopener noreferrer">GitHub</a>
+						<a href="https://github.com/aguo890/project-phase-i-are-we-cooked" target="_blank"
+							rel="noopener noreferrer">GitHub (Grant Access on Request)</a>
 					</p>
 				</article>
 				<article class="col-6 col-12-xsmall work-item">
